<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="none"
    tools:context=".AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/register"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="About Nirapotta"
        android:gravity="center"
        android:textColor="@color/cyan"
        android:textSize="40sp"
        android:fontFamily="@font/lobster"/>
    <TextView
        android:layout_marginTop="15dp"
        android:textColor="@color/cyan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registration"
        android:fontFamily="@font/lobster"
        android:textSize="20sp"/>
    <TextView
        android:layout_marginTop="15dp"
        android:textColor="#000000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrationdet"
        android:textSize="14sp"/>
    <TextView
        android:layout_marginTop="15dp"
        android:textColor="@color/cyan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/otp"
        android:fontFamily="@font/lobster"
        android:textSize="20sp"/>
    <TextView
        android:layout_marginTop="15dp"
        android:textColor="#000000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/otpdet"
        android:textSize="14sp"/>
        <TextView
            android:layout_marginTop="15dp"
            android:textColor="@color/cyan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:fontFamily="@font/lobster"
            android:textSize="20sp"/>
        <TextView
            android:layout_marginTop="15dp"
            android:textColor="#000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logindet"
            android:textSize="14sp"/>
        <TextView
            android:layout_marginTop="15dp"
            android:textColor="@color/cyan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dashboardadd"
            android:fontFamily="@font/lobster"
            android:textSize="20sp"/>
        <TextView
            android:layout_marginTop="15dp"
            android:textColor="#000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dashboardadddet"
            android:textSize="14sp"/>
        <TextView
            android:layout_marginTop="15dp"
            android:textColor="@color/cyan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/permission"
            android:fontFamily="@font/lobster"
            android:textSize="20sp"/>
        <TextView
            android:layout_marginTop="15dp"
            android:textColor="#000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/permissiondet"
            android:textSize="14sp"/>
        <TextView
            android:layout_marginTop="15dp"
            android:textColor="@color/cyan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dashboardsos"
            android:fontFamily="@font/lobster"
            android:textSize="20sp"/>
        <TextView
            android:layout_marginTop="15dp"
            android:textColor="#000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dashboardsosdet"
            android:textSize="14sp"/>


    </LinearLayout>
    </ScrollView>